# file-organizer

./: .gitignore  README.md  pyproject.toml
.sandbox_fileorg/: config.toml
.sandbox_fileorg/scan_root/: 2024-project-ideas.txt  design-draft.txt  notes-random.txt  python-homework.md  python-notes.md  receipt.txt  song-idea.txt  trip-photos-list.txt
.sandbox_fileorg/storage/: metadata.sqlite3-shm
drift/: __main__.py  cli.py  config.py  paths.py  undo.py
drift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
drift/chat/: loop.py  system_prompt.py
drift/chat/tools/: __init__.py  delete.py  duplicates.py  moves.py  previews.py  search.py  structure.py  undo.py
drift/embeddings/: __init__.py  factory.py  huggingface.py  image.py  text.py
drift/indexer/: __init__.py  pipeline.py  scan.py  types.py
drift/indexer/extract/: __init__.py  docx.py  image.py
drift/store/: __init__.py  chroma.py
drift/utils/: __init__.py  hashing.py
fileorg/: __main__.py  cli.py  config.py  paths.py  undo.py
fileorg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
fileorg/chat/: loop.py  system_prompt.py  tools.py
fileorg/chat/tools/: __init__.py  common.py  delete.py  duplicates.py  moves.py  plan_ops.py  previews.py  search.py  structure.py  undo.py
fileorg/embeddings/: __init__.py  base.py  factory.py  huggingface.py  image.py  text.py
fileorg/indexer/: __init__.py  chunk.py  pipeline.py  scan.py
fileorg/indexer/extract/: __init__.py  code.py  pdf.py
fileorg/store/: __init__.py  chroma.py  meta.py
fileorg/utils/: __init__.py
